Comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -7,19 +7,17 @@
 </head>
 <body>
     <main>
-
         <header>
-            <h1>Título do Site </h1>
+            <h1>Cursos Grátis </h1>
         </header>
         <article>
-            <h2> Artigo 001</h2>
-            <p>Texto Artigo 001 </p>
+            <h2> Curso de HTML5 com CSS3</h2>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati minus facere non necessitatibus fugiat ipsa sunt nemo consequuntur, nostrum officia autem! Assumenda animi similique ratione unde, doloribus aspernatur tempora minima. </p>
         </article>
         <article>
-            <h2> Artigo 002</h2>
-            <p>Texto Artigo 002 </p>
+            <h2> Curso de JavaScript </h2>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Id nisi error commodi ab. Omnis fugit distinctio perspiciatis minima numquam rem deserunt eligendi alias quaerat beatae doloremque tempore harum, ad officiis! </p>
         </article>
-    
     </main>
 </body>
 </html>
