--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site </h1>
+            <h1>Curso Grátis </h1>
             <link rel="stylesheet" href="estilos/style.css">
         </header>
         <article>
